# M_qml_Sudoku

./: CMakeLists.txt  MySudoku.pro  README.md  main.cpp  main.qml  solver.cpp  solver.h
src/: CMakeLists.txt  img.qrc  main.cpp  main.qml  myapp.rc  sudokugamer.cpp  sudokugamer.h  sudokumatrix.cpp  sudokumatrix.h
